AndroidDemo: lint
Signed-off-by: wanghui1 <wanghui1@enovatemotors.com>